tests/NormalTests/paczka1/small_fuzzy/21397239.err
Error in line 1: goQODGMBsj S895 22,9
Error in line 2: goQODGMBsj A545 0,3
Error in line 4: goQODGMBsj A884 41,8
